# matrix_inversion

./: .gitignore  Auswertung.ipynb  CMakeLists.txt  README.md  amd_benchmark.py  benchmark-desy.py  benchmark.py  compile-desy.py  fix-benchmark-desy.py  fix_home_script.py  inversion.cpp  main  main.cpp  random-matrix-gen.py  randomMatrix_100.txt  randomMatrix_20.txt  randomMatrix_200.txt  randomMatrix_50.txt  randomMatrix_500.txt  script.sh
clang/: main.cpp
gcc/: CMakeLists.txt  inversion.cpp  main.cpp
implementations/: cpu.cpp  cublas.cu  cuda.cu  eigen.cpp  hip.cpp  hip.cu  openacc.cpp  opencl.cpp  openmp-cpu.cpp  openmp-offload-llvm.cpp  openmp-offload.cpp
mains/: amd-offload.cpp  aomp-offload.cpp  clang-offload.cpp  gcc-offload.cpp  hip-offload.cpp  nvcc-offload.cu
matrices/: random-matrix-gen.py
nvcc/: CMakeLists.txt  inversion.cu  main.cu
